<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="newer.hn.smartdevice.SmartLoginActivity"
    android:orientation="vertical"
    android:background="@drawable/bgcolor">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_ipaddr"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"/>
    <EditText
        android:id="@+id/edt_ipaddr"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:hint="@string/edt_ipaddr"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="12dp"
        android:inputType="phone"
        android:focusableInTouchMode="true"
        android:background="@drawable/edit_style"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_port"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp" />
    <EditText
        android:id="@+id/edt_port"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:hint="@string/edt_port"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:focusableInTouchMode="true"
        android:background="@drawable/edit_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tcancel"
            android:textColor="#FF236A9C"
            android:textSize="16sp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tok"
            android:textColor="#FF236A9C"
            android:textSize="16sp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"/>

    </LinearLayout>

</LinearLayout>
